<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/mini_vertical_margin"
    android:orientation="vertical"
    tools:context=".main_menu_fragment.home_fragment.PickupNowFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:orientation="vertical"
                >
                <TextView
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textColor="@color/textNoActive"
                    android:layout_width="match_parent"
                    android:text="@string/later_pickup_tagline"
                    android:layout_height="wrap_content" />
                <TextView
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textNoActive"
                    android:textSize="@dimen/note_size"
                    android:text="@string/later_pickup_notes"
                    />
            </LinearLayout>
            <LinearLayout
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:orientation="vertical"
                >

                <!-- address -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3"
                        android:src="@drawable/icon_map_pickup"
                        android:layout_marginRight="8dp"
                        />
                    <EditText
                        android:id="@+id/etAddressPickupNow"
                        android:inputType="none"
                        android:layout_width="0dp"
                        android:textSize="13sp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:hint="@string/address_hint"
                        android:focusableInTouchMode="false"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="30dp"
                    >
                    <EditText
                        android:id="@+id/edit_address_detail"
                        android:inputType="textPostalAddress"
                        android:layout_width="0dp"
                        android:textSize="12sp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:hint="@string/add_address_detail"
                        />
                </LinearLayout>
                <!-- address -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3"
                        android:src="@drawable/ic_phone_dark"
                        android:layout_marginRight="8dp"
                        />
                    <EditText
                        android:id="@+id/etPhonePickupNow"
                        android:inputType="phone"
                        android:layout_width="0dp"
                        android:textSize="13sp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:hint="@string/phone_hint"
                        />
                </LinearLayout>
                <!-- desc -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3"
                        android:src="@drawable/icon_location_detail_pickup"
                        android:layout_marginRight="8dp"
                        />
                    <EditText
                        android:id="@+id/etDescriptionPickupNow"
                        android:inputType="textShortMessage"
                        android:layout_width="0dp"
                        android:textSize="13sp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:hint="@string/detail_hint"
                        />
                </LinearLayout>
                <Button
                    android:id="@+id/btnSubmitNow"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_gravity="end"
                    android:textColor="@color/textIcon"
                    android:background="@drawable/submit_button_tosca"
                    android:text="@string/login_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
